# learn_fluid

./: CMakeLists.txt  playground.cpp  visualizations.py
result/animation_fun/: sine_animation.txt
src/: chapter_1_basic.cpp
src/chapter1/: animation_fun.cpp
src/chapter2/: particle_based_simulator.cpp
